fix alignment

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,11 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     display: flex;
+    flex-direction: column; 
     justify-content: flex-start;
     align-items: center;
     height: 100vh;
-    padding-left: 12pc; 
-    padding-left: 12pc;
+    padding: 0 12px; 
   }
   
   .main-content {
@@ -18,7 +18,9 @@
     font-weight: 400;
     line-height: 1.6;
     color: aliceblue;
-    max-width: 600px; 
+    max-width: 600px;
+    width: 100%; 
+    padding: 20px; 
   }
   
   .main-content h2 {
@@ -33,15 +35,15 @@
   }
   
   .header-line {
-    box-shadow: 2px 4px 8px #D632A1; 
+    box-shadow: 2px 4px 8px #D632A1;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px; 
+    padding: 10px;
     font-size: 17px;
-    color: whitesmoke; 
+    color: whitesmoke;
     background-color: transparent;
     border: 2px solid gray;
-    border-radius: 20px; 
-    display: inline-block; 
+    border-radius: 20px;
+    display: inline-block;
   }
   
   button {
@@ -50,9 +52,6 @@
     color: rgb(2, 2, 37);
     font-family: Arial, Helvetica, sans-serif;
     padding: 15px 30px;
-
-
-
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -65,9 +64,24 @@
   button:hover {
     background-color: #CDCCCF;
   }
-
+  
   .gradient-text {
     background: linear-gradient(90deg, #D933A1, #9C22AA);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+  
+  @media screen and (max-width: 768px) {
+    .homepage {
+      padding: 0 6px; /* Adjust padding for smaller screens */
+    }
+  
+    .main-content {
+      font-size: 16px; /* Decrease font size for smaller screens */
+    }
+  
+    .main-content h2 {
+      font-size: 32px; /* Decrease heading size for smaller screens */
+    }
+  }
+  
