--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -49,14 +49,14 @@
  
  } */
  
- @media screen and (min-width:980px) {
+ @media screen and (min-width:768px) {
      #mobile{
          display: none;
          
      }
  }
  
- @media screen and (max-width:980px){
+ @media screen and (max-width:768px){
      .navbar{
          display: flex;
          justify-content: around;
